ccrcbDSLParser.py
# Generated from ccrcbDSL.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ccrcbDSLParser ( Parser ):

    grammarFileName = "ccrcbDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'use'", "'as'", "'dataset'", "'accession'", 
                     "'to create'", "'from'", "'calculate'", "'of'", "'using'", 
                     "'with'", "'multiple testing correction'", "'group'", 
                     "'gene list'", "'differential expression'", "'vs'", 
                     "'find'", "'connections for gene list'", "'##'", "'table'", 
                     "'negative'", "'postive'", "'all'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CMP", "OP", 
                      "ID", "EOL", "WS", "STRING", "COMMA", "FLOAT" ]

    RULE_recipe = 0
    RULE_step = 1
    RULE_use_spec = 2
    RULE_data_spec = 3
    RULE_location_spec = 4
    RULE_repository_spec = 5
    RULE_local_spec = 6
    RULE_logical_criteria = 7
    RULE_filter_spec = 8
    RULE_diff_expr_spec = 9
    RULE_entity = 10
    RULE_contrast = 11
    RULE_cmap_spec = 12
    RULE_comment = 13
    RULE_id_list = 14
    RULE_datatype_spec = 15
    RULE_conn_type_spec = 16
    RULE_expr_list = 17

    ruleNames =  [ "recipe", "step", "use_spec", "data_spec", "location_spec", 
                   "repository_spec", "local_spec", "logical_criteria", 
                   "filter_spec", "diff_expr_spec", "entity", "contrast", 
                   "cmap_spec", "comment", "id_list", "datatype_spec", "conn_type_spec", 
                   "expr_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    CMP=23
    OP=24
    ID=25
    EOL=26
    WS=27
    STRING=28
    COMMA=29
    FLOAT=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RecipeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ccrcbDSLParser.EOF, 0)

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ccrcbDSLParser.StepContext)
            else:
                return self.getTypedRuleContext(ccrcbDSLParser.StepContext,i)


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_recipe

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecipe" ):
                return visitor.visitRecipe(self)
            else:
                return visitor.visitChildren(self)




    def recipe(self):

        localctx = ccrcbDSLParser.RecipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_recipe)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ccrcbDSLParser.T__0) | (1 << ccrcbDSLParser.T__6) | (1 << ccrcbDSLParser.T__15) | (1 << ccrcbDSLParser.T__17))) != 0):
                self.state = 36
                self.step()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(ccrcbDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StepContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def use_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Use_specContext,0)


        def diff_expr_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Diff_expr_specContext,0)


        def cmap_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Cmap_specContext,0)


        def comment(self):
            return self.getTypedRuleContext(ccrcbDSLParser.CommentContext,0)


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_step

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStep" ):
                return visitor.visitStep(self)
            else:
                return visitor.visitChildren(self)




    def step(self):

        localctx = ccrcbDSLParser.StepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_step)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ccrcbDSLParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.use_spec()
                pass
            elif token in [ccrcbDSLParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.diff_expr_spec()
                pass
            elif token in [ccrcbDSLParser.T__15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.cmap_spec()
                pass
            elif token in [ccrcbDSLParser.T__17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Use_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filter_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Filter_specContext,0)


        def data_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Data_specContext,0)


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_use_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUse_spec" ):
                return visitor.visitUse_spec(self)
            else:
                return visitor.visitChildren(self)




    def use_spec(self):

        localctx = ccrcbDSLParser.Use_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_use_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(ccrcbDSLParser.T__0)
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 51
                self.filter_spec()
                pass

            elif la_ == 2:
                self.state = 52
                self.data_spec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Data_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dataset_id = None # Token

        def location_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Location_specContext,0)


        def ID(self):
            return self.getToken(ccrcbDSLParser.ID, 0)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_data_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_spec" ):
                return visitor.visitData_spec(self)
            else:
                return visitor.visitChildren(self)




    def data_spec(self):

        localctx = ccrcbDSLParser.Data_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_data_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.location_spec()
            self.state = 56
            self.match(ccrcbDSLParser.T__1)
            self.state = 57
            localctx.dataset_id = self.match(ccrcbDSLParser.ID)
            self.state = 58
            self.match(ccrcbDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Location_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def repository_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Repository_specContext,0)


        def local_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Local_specContext,0)


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_location_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocation_spec" ):
                return visitor.visitLocation_spec(self)
            else:
                return visitor.visitChildren(self)




    def location_spec(self):

        localctx = ccrcbDSLParser.Location_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_location_spec)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ccrcbDSLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.repository_spec()
                pass
            elif token in [ccrcbDSLParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.local_spec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Repository_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.repository_id = None # Token
            self.dataset_id = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.ID)
            else:
                return self.getToken(ccrcbDSLParser.ID, i)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_repository_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepository_spec" ):
                return visitor.visitRepository_spec(self)
            else:
                return visitor.visitChildren(self)




    def repository_spec(self):

        localctx = ccrcbDSLParser.Repository_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_repository_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            localctx.repository_id = self.match(ccrcbDSLParser.ID)
            self.state = 65
            self.match(ccrcbDSLParser.T__3)
            self.state = 66
            localctx.dataset_id = self.match(ccrcbDSLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Local_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.directory = None # Token

        def STRING(self):
            return self.getToken(ccrcbDSLParser.STRING, 0)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_local_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal_spec" ):
                return visitor.visitLocal_spec(self)
            else:
                return visitor.visitChildren(self)




    def local_spec(self):

        localctx = ccrcbDSLParser.Local_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_local_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            localctx.directory = self.match(ccrcbDSLParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Logical_criteriaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.comparator = None # Token
            self.value = None # Token
            self.operator = None # Token

        def ID(self):
            return self.getToken(ccrcbDSLParser.ID, 0)

        def CMP(self):
            return self.getToken(ccrcbDSLParser.CMP, 0)

        def FLOAT(self):
            return self.getToken(ccrcbDSLParser.FLOAT, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.STRING)
            else:
                return self.getToken(ccrcbDSLParser.STRING, i)

        def logical_criteria(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ccrcbDSLParser.Logical_criteriaContext)
            else:
                return self.getTypedRuleContext(ccrcbDSLParser.Logical_criteriaContext,i)


        def OP(self):
            return self.getToken(ccrcbDSLParser.OP, 0)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_logical_criteria

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_criteria" ):
                return visitor.visitLogical_criteria(self)
            else:
                return visitor.visitChildren(self)



    def logical_criteria(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ccrcbDSLParser.Logical_criteriaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_logical_criteria, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ccrcbDSLParser.ID]:
                self.state = 71
                localctx.name = self.match(ccrcbDSLParser.ID)
                self.state = 72
                localctx.comparator = self.match(ccrcbDSLParser.CMP)
                self.state = 73
                localctx.value = self.match(ccrcbDSLParser.FLOAT)
                pass
            elif token in [ccrcbDSLParser.STRING]:
                self.state = 74
                localctx.name = self.match(ccrcbDSLParser.STRING)
                self.state = 75
                localctx.comparator = self.match(ccrcbDSLParser.CMP)
                self.state = 76
                localctx.value = self.match(ccrcbDSLParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ccrcbDSLParser.Logical_criteriaContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_criteria)
                    self.state = 79
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 80
                    localctx.operator = self.match(ccrcbDSLParser.OP)
                    self.state = 81
                    self.logical_criteria(4) 
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Filter_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.entity_id = None # Token
            self.dataset_id = None # Token

        def logical_criteria(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Logical_criteriaContext,0)


        def entity(self):
            return self.getTypedRuleContext(ccrcbDSLParser.EntityContext,0)


        def datatype_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Datatype_specContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.ID)
            else:
                return self.getToken(ccrcbDSLParser.ID, i)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_filter_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilter_spec" ):
                return visitor.visitFilter_spec(self)
            else:
                return visitor.visitChildren(self)




    def filter_spec(self):

        localctx = ccrcbDSLParser.Filter_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_filter_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.logical_criteria(0)
            self.state = 88
            self.match(ccrcbDSLParser.T__4)
            self.state = 89
            self.entity()
            self.state = 90
            localctx.entity_id = self.match(ccrcbDSLParser.ID)
            self.state = 91
            self.match(ccrcbDSLParser.T__5)
            self.state = 92
            localctx.dataset_id = self.match(ccrcbDSLParser.ID)
            self.state = 93
            self.datatype_spec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Diff_expr_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dexpr_id = None # Token
            self.algorithm = None # Token
            self.correction_algorithm = None # Token

        def entity(self):
            return self.getTypedRuleContext(ccrcbDSLParser.EntityContext,0)


        def contrast(self):
            return self.getTypedRuleContext(ccrcbDSLParser.ContrastContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.ID)
            else:
                return self.getToken(ccrcbDSLParser.ID, i)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_diff_expr_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiff_expr_spec" ):
                return visitor.visitDiff_expr_spec(self)
            else:
                return visitor.visitChildren(self)




    def diff_expr_spec(self):

        localctx = ccrcbDSLParser.Diff_expr_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_diff_expr_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(ccrcbDSLParser.T__6)
            self.state = 96
            self.entity()
            self.state = 97
            localctx.dexpr_id = self.match(ccrcbDSLParser.ID)
            self.state = 98
            self.match(ccrcbDSLParser.T__7)
            self.state = 99
            self.contrast()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ccrcbDSLParser.T__8:
                self.state = 100
                self.match(ccrcbDSLParser.T__8)
                self.state = 101
                localctx.algorithm = self.match(ccrcbDSLParser.ID)


            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ccrcbDSLParser.T__9:
                self.state = 104
                self.match(ccrcbDSLParser.T__9)
                self.state = 105
                localctx.correction_algorithm = self.match(ccrcbDSLParser.ID)
                self.state = 106
                self.match(ccrcbDSLParser.T__10)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_entity

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntity" ):
                return visitor.visitEntity(self)
            else:
                return visitor.visitChildren(self)




    def entity(self):

        localctx = ccrcbDSLParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ccrcbDSLParser.T__11) | (1 << ccrcbDSLParser.T__12) | (1 << ccrcbDSLParser.T__13))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContrastContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.group1 = None # Token
            self.group0 = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.ID)
            else:
                return self.getToken(ccrcbDSLParser.ID, i)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_contrast

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContrast" ):
                return visitor.visitContrast(self)
            else:
                return visitor.visitChildren(self)




    def contrast(self):

        localctx = ccrcbDSLParser.ContrastContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_contrast)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            localctx.group1 = self.match(ccrcbDSLParser.ID)
            self.state = 112
            self.match(ccrcbDSLParser.T__14)
            self.state = 113
            localctx.group0 = self.match(ccrcbDSLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmap_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.gene_list = None # Token

        def conn_type_spec(self):
            return self.getTypedRuleContext(ccrcbDSLParser.Conn_type_specContext,0)


        def ID(self):
            return self.getToken(ccrcbDSLParser.ID, 0)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_cmap_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmap_spec" ):
                return visitor.visitCmap_spec(self)
            else:
                return visitor.visitChildren(self)




    def cmap_spec(self):

        localctx = ccrcbDSLParser.Cmap_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cmap_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(ccrcbDSLParser.T__15)
            self.state = 116
            self.conn_type_spec()
            self.state = 117
            self.match(ccrcbDSLParser.T__16)
            self.state = 118
            localctx.gene_list = self.match(ccrcbDSLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_comment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = ccrcbDSLParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ccrcbDSLParser.T__17)
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 121
                    self.matchWildcard() 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 127
            self.match(ccrcbDSLParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.first_id = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.ID)
            else:
                return self.getToken(ccrcbDSLParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.COMMA)
            else:
                return self.getToken(ccrcbDSLParser.COMMA, i)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = ccrcbDSLParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            localctx.first_id = self.match(ccrcbDSLParser.ID)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ccrcbDSLParser.COMMA:
                self.state = 130
                self.match(ccrcbDSLParser.COMMA)
                self.state = 131
                self.match(ccrcbDSLParser.ID)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Datatype_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_datatype_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDatatype_spec" ):
                return visitor.visitDatatype_spec(self)
            else:
                return visitor.visitChildren(self)




    def datatype_spec(self):

        localctx = ccrcbDSLParser.Datatype_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_datatype_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not(_la==ccrcbDSLParser.T__2 or _la==ccrcbDSLParser.T__18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Conn_type_specContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_conn_type_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConn_type_spec" ):
                return visitor.visitConn_type_spec(self)
            else:
                return visitor.visitChildren(self)




    def conn_type_spec(self):

        localctx = ccrcbDSLParser.Conn_type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_conn_type_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ccrcbDSLParser.T__19) | (1 << ccrcbDSLParser.T__20) | (1 << ccrcbDSLParser.T__21))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.STRING)
            else:
                return self.getToken(ccrcbDSLParser.STRING, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ccrcbDSLParser.COMMA)
            else:
                return self.getToken(ccrcbDSLParser.COMMA, i)

        def getRuleIndex(self):
            return ccrcbDSLParser.RULE_expr_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_list" ):
                return visitor.visitExpr_list(self)
            else:
                return visitor.visitChildren(self)




    def expr_list(self):
